Perma [tier2] SM Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
Categories
(Core :: JavaScript Engine: JIT, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: evilpies)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(2 files)
Filed by: apavel [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=303652307&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/AkpUlDpVR3aODTP3nbtL5w/runs/0/artifacts/public/logs/live_backing.log
[task 2020-05-25T15:57:40.081Z] make -C js/src check-jit-test
[task 2020-05-25T15:57:40.086Z] make[1]: Entering directory '/builds/worker/workspace/build/src/obj-spider/js/src'
[task 2020-05-25T15:57:40.086Z] ../../dist/bin/run-mozilla.sh /builds/worker/workspace/build/src/obj-spider/_virtualenvs/init_py3/bin/python -u /builds/worker/workspace/build/src/js/src/jit-test/jit_test.py
[task 2020-05-25T15:57:40.086Z] --no-slow --no-progress --format=automation --jitflags=all
[task 2020-05-25T15:57:40.086Z]
[task 2020-05-25T15:57:40.086Z] --args='--dll /builds/worker/workspace/breakpad-tools/libbreakpadinjector.so' --jitflags=warp
[task 2020-05-25T15:57:40.086Z] ../../dist/bin/js
[task 2020-05-25T15:57:40.986Z] TEST-PASS | js/src/jit-test/tests/backup-point-bug1315634.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.006Z] TEST-PASS | js/src/jit-test/tests/bug1213574.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.021Z] TEST-PASS | js/src/jit-test/tests/backup-point-bug1315634.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.022Z] TEST-PASS | js/src/jit-test/tests/bug1213574.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.025Z] TEST-PASS | js/src/jit-test/tests/bug1323854-2.js | Success (code 0, args "--ion-gvn=off --warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.030Z] TEST-PASS | js/src/jit-test/tests/bug1366925.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.033Z] TEST-PASS | js/src/jit-test/tests/bug1375074.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.035Z] TEST-PASS | js/src/jit-test/tests/bug1323854-2.js | Success (code 0, args "--ion-gvn=off --warp") [0.1 s]
[task 2020-05-25T15:57:41.039Z] TEST-PASS | js/src/jit-test/tests/bug1366925.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.051Z] TEST-PASS | js/src/jit-test/tests/bug1375074.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.056Z] TEST-PASS | js/src/jit-test/tests/bug1636306.js | Success (code 0, args "--no-ion --warp") [0.1 s]
[task 2020-05-25T15:57:41.070Z] TEST-PASS | js/src/jit-test/tests/bug765479.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.076Z] Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.076Z] Exit code: -11
[task 2020-05-25T15:57:41.076Z] FAIL - bug1580246.js
[task 2020-05-25T15:57:41.076Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/bug1580246.js | Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666 (code -11, args "--warp") [0.2 s]
[task 2020-05-25T15:57:41.077Z] INFO exit-status : -11
[task 2020-05-25T15:57:41.077Z] INFO timed-out : False
[task 2020-05-25T15:57:41.077Z] INFO stderr 2> Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.096Z] TEST-PASS | js/src/jit-test/tests/bug1490638.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.2 s]
[task 2020-05-25T15:57:41.107Z] TEST-PASS | js/src/jit-test/tests/bug765479.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.109Z] TEST-PASS | js/src/jit-test/tests/bug793385.js | Success (code 3, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.118Z] TEST-PASS | js/src/jit-test/tests/bug793385.js | Success (code 3, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.122Z] TEST-PASS | js/src/jit-test/tests/bug828119.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.128Z] TEST-PASS | js/src/jit-test/tests/bug828119.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.130Z] TEST-PASS | js/src/jit-test/tests/bug825379.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.133Z] TEST-PASS | js/src/jit-test/tests/bug825379.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.159Z] TEST-PASS | js/src/jit-test/tests/bug847682.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.187Z] TEST-PASS | js/src/jit-test/tests/bug953337.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.193Z] TEST-PASS | js/src/jit-test/tests/bug830943.js | Success (code 3, args "--warp") [0.2 s]
[task 2020-05-25T15:57:41.193Z] TEST-PASS | js/src/jit-test/tests/bug847682.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.202Z] TEST-PASS | js/src/jit-test/tests/bug1490638.js | Success (code 0, args "--warp") [0.3 s]
[task 2020-05-25T15:57:41.205Z] TEST-PASS | js/src/jit-test/tests/bug953337.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.205Z] TEST-PASS | js/src/jit-test/tests/TypedObject/Bug981650.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.216Z] TEST-PASS | js/src/jit-test/tests/symbol-equality.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.221Z] TEST-PASS | js/src/jit-test/tests/TypedObject/array-hasproperty.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.227Z] TEST-PASS | js/src/jit-test/tests/TypedObject/aggregate-set-neutered.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.242Z] TEST-PASS | js/src/jit-test/tests/TypedObject/array-hasproperty.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.244Z] TEST-PASS | js/src/jit-test/tests/symbol-equality.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.245Z] TEST-PASS | js/src/jit-test/tests/TypedObject/Bug981650.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.249Z] TEST-PASS | js/src/jit-test/tests/bug830943.js | Success (code 3, args "--warp --ion-eager --ion-offthread-compile=off") [0.2 s]
[task 2020-05-25T15:57:41.276Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug-1620193.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.281Z] TEST-PASS | js/src/jit-test/tests/TypedObject/aggregate-set-neutered.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.2 s]
[task 2020-05-25T15:57:41.300Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug1096016.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.302Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug1096023.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.305Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug-1620193.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.308Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug1098961.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.318Z] Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.318Z] Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.318Z] Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.319Z] Exit code: -11
[task 2020-05-25T15:57:41.319Z] FAIL - TypedObject/bug1004527.js
[task 2020-05-25T15:57:41.319Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/TypedObject/bug1004527.js | Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666 (code -11, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.319Z] INFO exit-status : -11
[task 2020-05-25T15:57:41.319Z] INFO timed-out : False
[task 2020-05-25T15:57:41.320Z] INFO stderr 2> Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.320Z] INFO stderr 2> Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.320Z] INFO stderr 2> Assertion failure: block(), at /builds/worker/workspace/build/src/js/src/jit/MIR.h:666
[task 2020-05-25T15:57:41.322Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug1096016.js | Success (code 0, args "--warp --ion-eager --ion-offthread-compile=off") [0.1 s]
[task 2020-05-25T15:57:41.324Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug1100202.js | Success (code 0, args "--warp") [0.1 s]
[task 2020-05-25T15:57:41.335Z] TEST-PASS | js/src/jit-test/tests/TypedObject/bug1102329.js | Success (code 0, args "--warp") [0.1 s]
Comment 1•5 years ago
|
||
Hi Tom, I believe this is a regression of bug 1640504, please take a look.
| Assignee | ||
Comment 2•5 years ago
|
||
This assert is reached via MaybeSetImplicitlyUsed, so before bug 1640107 this problem might not have triggered the test suite at all.
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
| bugherder | ||
Comment 5•5 years ago
|
||
Set release status flags based on info from the regressing bug 1640504
Updated•5 years ago
|
Comment 6•5 years ago
|
||
Tom: This is still happening:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=304324050&repo=mozilla-central&lineNumber=21056
Can you please take a look?
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 8•5 years ago
|
||
Comment 10•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
| Assignee | ||
Comment 11•5 years ago
•
|
||
So the other test failure I fixed last night was caused by bug 1641708. The MIsCallable constructor asserts that the input is either an object or any value. The idea behind this is to obviously make the caller use a constant false when the known input is a primitive value as these can never be callable. So far I think we tried to err on the side of not doing this kind of folding during MIR construction. I think this is right on the edge of what could still be considered reasonable. We already do some folding like MIsObject with known object inputs in the transpiler.
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Description
•