Bug 1640686 - Add MIsObject instruction to the current block. r=iain

This assert is reached via MaybeSetImplicitlyUsed, so before bug 1640107 this problem might not have triggered the test suite at all.

Differential Revision: https://phabricator.services.mozilla.com/D76725